fixing alignment with create activity

--- a/src/app/activity/create-activity/create-activity.component.scss
+++ b/src/app/activity/create-activity/create-activity.component.scss
@@ -27,6 +27,6 @@ table {
 
 .form-parent {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
 }
